Add dynamism with state and props

--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -26,6 +26,7 @@
       border-radius: 5px;
       background-color: #5D677C;
       box-shadow: 0 2px 4px #2D2B2B9F inset;
+      color: white;
 
       &::placeholder {
         color: #BFBFBF;
