--- a/src/components/List/List.module.scss
+++ b/src/components/List/List.module.scss
@@ -56,6 +56,12 @@
 .selectedTask {
   background-color: #292929;
   box-shadow: 2px 4px 4px #0000009f inset;
+
+  &:hover {
+    background-color: #292929;
+    box-shadow: 2px 4px 4px #0000009f inset;
+    cursor: auto;
+  }
 }
 
 .completedTask {
